---
(4.2.8p5) 2016/01/07 Released by Harlan Stenn <stenn@ntp.org>

* [Sec 2956] small-step/big-step.  Close the panic gate earlier.  HStenn.
* CID 1339955: Free allocated memory in caljulian test.  HStenn.
* CID 1339962: Explicitly initialize variable in caljulian test.  HStenn.
* CID 1341527: Quiet a CHECKED_RETURN in sntp/tests/t-log.c.  HStenn.
* CID 1341533: Missing assertion in sntp/tests/t-log.c.  HStenn.
* CID 1341534: Resource leak in tests/ntpd/t-ntp_signd.c.  HStenn.
* CID 1341535: Resource leak in tests/ntpd/t-ntp_signd.c.  HStenn.
* CID 1341536: Resource leak in tests/ntpd/t-ntp_signd.c.  HStenn.
* CID 1341537: Resource leak in tests/ntpd/t-ntp_signd.c.  HStenn.
* CID 1341538: Memory leak in tests/ntpd/ntp_prio_q.c:262.  HStenn.
* CID 1341677: Nits in sntp/tests/keyFile.c.  HStenn.
* CID 1341678: Nits in sntp/tests/keyFile.c.  HStenn.
* CID 1341679: Nits in sntp/tests/keyFile.c.  HStenn.
* CID 1341680: Nits in sntp/tests/keyFile.c.  HStenn.
* CID 1341681: Nits in sntp/tests/keyFile.c.  HStenn.
* CID 1341682: Nit in libntp/authreadkeys.c.  HStenn.
* CID 1341684: Nit in tests/ntpd/t-ntp_signd.c.  HStenn.
* [Bug 2829] Look at pipe_fds in ntpd.c  (did so. perlinger@ntp.org)
* [Bug 2887] stratum -1 config results as showing value 99
  - fudge stratum should only accept values [0..16]. perlinger@ntp.org
* [Bug 2932] Update leapsecond file info in miscopt.html.  CWoodbury, HStenn.
* [Bug 2934] tests/ntpd/t-ntp_scanner.c has a magic constant wired in.  HMurray
* [Bug 2944] errno is not preserved properly in ntpdate after sendto call.
  - applied patch by Christos Zoulas.  perlinger@ntp.org
* [Bug 2952] Symmetric active/passive mode is broken.  HStenn.
* [Bug 2954] Version 4.2.8p4 crashes on startup with sig fault
  - fixed data race conditions in threaded DNS worker. perlinger@ntp.org
  - limit threading warm-up to linux; FreeBSD bombs on it. perlinger@ntp.org
* [Bug 2957] 'unsigned int' vs 'size_t' format clash. perlinger@ntp.org